2007-06-29  Boyd Timothy <btimothy@gmail.com> 

	* configure.in, Makefile.include, Tomboy/Makefile.am, Tomboy/tomboy.in,
	  Makefile.am, po/POTFILES.in: Changed the location of Mono.Addins to
	  root of project.  Adjusted AM_INIT and AM_INIT_AUTOMAKE to allow
	  longer file paths when creating tarball.

2007-06-29  Boyd Timothy <btimothy@gmail.com> 

	* configure.in, Makefile.include, Tomboy/Makefile.am, Tomboy/tomboy.in,
	  Makefile.am, po/POTFILES.in: Changed the location of Mono.Addins to
	  root of project.  Adjusted AM_INIT and AM_INIT_AUTOMAKE to allow
	  longer file paths when creating tarball.

2007-06-29  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/Mono.Addins: Moved to root of project in hopes that it will
	  solve the problem of make distcheck.

2007-06-29  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/PreferencesDialog.cs: Added a TODO comment about removing
	  ~/.tomboy/manifest.xml.
	* Tomboy/Tomboy.cs: Added code to allow note files to be added/opened
	  from anywhere on the machine (added primarily for the Giver
	  project).

2007-06-29  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/Makefile.am: Removed trailing whitespace causing build
	  failure.

2007-06-29  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* configure.in, Tomboy.mdp, Tomboy/Addins/Makefile.am,
	  Tomboy/Addins/SshSyncService,
	  Tomboy/Addins/SshSyncService/SshSyncServiceAddin.cs: Initial commit
	  of SshSyncServiceAddin using sshfs.  
	* Tomboy/Addins/WebDavSyncService/WebDavSyncServiceAddin.cs: Account
	  for Ubuntu's `mount` output.

2007-06-29  Boyd Timothy <btimothy@gmail.com> 

	* configure.in: Create a makefile for the FileSystemSyncService Addin.
	* Tomboy.mdp: Added FileSystemSyncServiceAddin.cs.
	* Tomboy/PreferencesDialog.cs: Warn the user about clearing their sync
	  settings before actually doing it.
	* Tomboy/Addins/FileSystemSyncService/FileSystemSyncService.addin.xml,
	  Tomboy/Addins/FileSystemSyncService/FileSystemSyncServiceAddin.cs,